# django_practice

./: pyproject.toml
social/: settings.py
