[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["JWYOO <godjaewook@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
social-auth-app-django = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
